--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+   <div>Hello  World</div>
     </main>
 
     <footer>
